Fails to delete one instance of a recurring event
I have a reoccurring event with multiple participants.
I moved one occurrence of the event and some time later tried to delete it.
I could not delete it in Evolution, so I deleted it through a Outlook Web App of the Exchange server.
The event then also disappeared in Evolution but reappeared at the original date (the date of the reoccuring series).
When I try to delete this newly appeared event, I get the error message:
Cannot remove calendar object: Occurrence with this index was previously deleted from the recurrence.
The event does NOT appear in the Outlook Web App or a local Outlook instance on a Windows machine.
So I think, this report is three-fold:
- I could not delete a single event of a reoccurring series
- After deletion via Outlook, in Evolution the original event falsely reappears
- Deleting of the falsely reappearing event fails.
EDIT:
evolution 3.34
evolution-ews 3.34
under gnome-shell 3.34.0
using ArchLinux, Kernel version 5.3.1