I#70 - Fails to delete one instance of a recurring event

Closes https://gitlab.gnome.org/GNOME/evolution-ews/issues/70